<resources>
    <string name="app_name">NHL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NHL TEAMS</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="image">Image</string>
    <string name="playerName">Player Name</string>
    <string name="teamPlayer_Position">Position</string>
    <string name="countryName">Country Name</string>
    <string name="flag_image">Flag</string>
    <string name="teamPlayer_number">#</string>
    <string name="please_select_a_team_from_menu">Please Select a Team from Menu</string>
    <string name="teams">Teams</string>
    <string name="header_number_text">###</string>
</resources>
