<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_players_player_card_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_margin_horizontal"
    card_view:cardBackgroundColor="@color/colorTextBackground"
    card_view:cardPreventCornerOverlap="false">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/no_width"
        android:layout_marginBottom="1dp"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/list_players_button_headerNumber"
            android:layout_width="@dimen/no_width"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="@drawable/table_content_cell_bg"
            android:text="@string/header_number_text"
            android:textSize="@dimen/table_text_size"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>


        <ImageView
            android:id="@+id/team_imageView_player"
            android:layout_width="@dimen/no_width"
            android:layout_height="@dimen/player_image_height"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="@drawable/table_content_cell_bg"
            android:text="@string/image"
            android:textSize="@dimen/table_text_size" />

        <TextView
            android:id="@+id/list_players_textView_headerName"
            android:layout_width="@dimen/no_width"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="3"
            android:background="@drawable/table_content_cell_bg"
            android:text="@string/playerName"
            android:textSize="@dimen/table_text_size"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>

        <EditText
            android:id="@+id/list_players_textView_headerPosition"
            android:layout_width="@dimen/no_width"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="3"
            android:background="@drawable/table_content_cell_bg"
            android:text="@string/teamPlayer_Position"
            android:editable="false"
            android:textSize="@dimen/table_text_size"
            android:gravity="center"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:inputType="text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>