<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">


        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:id="@+id/text_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="35dp"/>
            </TableRow>
            <TableRow>

                <EditText
                    android:id="@+id/editText_items_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:drawableLeft="@drawable/ic_search_black_24dp"
                    android:drawablePadding="5dp"
                    android:inputType="text" />
            </TableRow>



            <TableRow>
                <Button
                    android:id="@+id/teamPlayer_number"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="2"
                    android:background="@drawable/table_header_cell_bg"
                    android:drawableStart="@drawable/ic_import_export_black_24dp"
                    android:drawableLeft="@drawable/ic_import_export_black_24dp"
                    android:gravity="center"
                    android:text="@string/teamPlayer_number"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/teamPlayer_image"
                    android:layout_width="0dip"
                    android:layout_height="60dp"
                    android:layout_gravity="top"
                    android:layout_weight="2"
                    android:background="@drawable/table_header_cell_bg"
                    android:text="@string/image"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/teamPlayer_name"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="3"
                    android:background="@drawable/table_header_cell_bg"
                    android:drawableStart="@drawable/ic_import_export_black_24dp"
                    android:drawableLeft="@drawable/ic_import_export_black_24dp"
                    android:gravity="center"
                    android:text="@string/playerName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/teamPlayer_position"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_weight="3"
                    android:background="@drawable/table_header_cell_bg"
                    android:gravity="center"
                    android:text="@string/teamPlayer_Position"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow android:layout_width="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/teamPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/teamplayers" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>